[B]1.0.7:[/B]
- migrace na nové API stream.resolver
[B]1.0.5:[/B]
- opraven chyba při listování epizod Hawaii-Five-0
- opraven zkokuknito resolver
[B]1.0.4:[/B]
- lokalizace cs,en
- zvýšení verze kvůli stream resolveru
[B]1.0.2:[/B]
- pokud je nalezen více než jeden zdroj seriálu, plugin nechá uživatele vybrat
- opravy chyb, kdy přehrávání vůbec nefungovalo
- oprava přehrávání na XboXu (doufejme)
[B]1.0.1:[/B]
 - opraveno neúplné listování epizod u některých seriálů
 - přidaná závistols na script.module.stream.resolver - přesunut kód, který
 získává URL streamů
 - přidán přehled nejnovějších epizod
 - přidán krátký popis ke každému seriálu
[B]1.0.0:[/B]
Initial version